feat: criando controller e rotas para veiculos
