# api_pdb/app/serializers/vehicle_blueprint.rb
@@ -1,5 +1,10 @@
 class VehicleBlueprint < Blueprinter::Base
   identifier :id
 
-  fields :car_number
+  fields :car_number,
+         :km,
+         :car_line_id,
+         :oil_date,
+         :tire_date,
+         :revision_date
 end
